Initiated build of game canvas with interactive sprites

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.press-start-2p-regular {
+    font-family: "Press Start 2P", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }  
+
 :root {
     --white: #ffffff;
     --light: whitesmoke;
