--- a/.nest/app/templates/universityMain/publicUniversity.html
+++ b/.nest/app/templates/universityMain/publicUniversity.html
@@ -28,6 +28,6 @@
         <p class="degree-cost"></p>
         <button class="degree-choice-btn" data-degree="degree3">Select Degree</button>
     </div>
-    <p><a href="../islandIndex.html">Back to the field</a></p>
+    <p><a href="{{ url_for('home') }}">Back to the field</a></p>
 </body>
 </html>
