REST APIs were built to create new university locals and add new students to the university

--- a/.nest/app/templates/islandIndex.html
+++ b/.nest/app/templates/islandIndex.html
@@ -12,11 +12,11 @@
     <div id="greetings">
         <h2>Welcome to Grasshopper Island</h2>
         <p>Select the university option that you'd like to explore</p>
-        <a href="{{ url_for('publicUniversity') }}">Public University</a>
+        <a href="{{ url_for('public_university') }}">Public University</a>
         <br>
-        <a href="{{ url_for('privateUniversity') }}">Private University</a>
+        <a href="{{ url_for('private_university') }}">Private University</a>
     </div>
-    <div id="publicUniversity">
+    <!-- <div id="publicUniversity"> -->
 
     </div>
     <div id="privateUniversity">
