--- a/.nest/app/templates/home.html
+++ b/.nest/app/templates/home.html
@@ -22,13 +22,16 @@
         {% endif %}
     {% endwith %}
     
-    <form method="POST">
-        <input type="text" name="command" placeholder="Enter command here" required>
-        <button type="submit">Submit</button>
+    <form action="/" method="POST" id="action-form">
+        <input type="text" name="command" placeholder="Enter command here" required autofocus>
     </form>
-
-    {% if 'student' in session %}
-        <p><a href="{ url_for('logout' )}">Logout</a></p>
-    {% endif %}
+    <script>
+        document.getElementById('action-form').addEventListener('keyup', function(event) {
+            if (event.key == 'Enter') {
+                event.preventDefault();
+                this.submit();
+            }
+        })
+    </script>
 </body>
 </html>
