--- a/.nest/app/templates/island-index.html
+++ b/.nest/app/templates/island-index.html
@@ -15,13 +15,16 @@
         <a href="{{ url_for('public_university') }}">Public University</a>
         <br>
         <a href="{{ url_for('private_university') }}">Private University</a>
-    </div>
-    <!-- <div id="publicUniversity"> -->
+    <!-- </div>
+     <div id="publicUniversity"> 
 
     </div>
     <div id="privateUniversity">
 
-    </div>
+    </div> -->
+    {% if 'student' in session %}
+        <p><a href="{ url_for('logout' )}">Logout</a></p>
+    {% endif %}
 </body>
 
 </html>
