Fixed bug that wasn't allowing for the creation of new users in the local storage

--- a/.nest/app/templates/create-account.html
+++ b/.nest/app/templates/create-account.html
@@ -11,7 +11,7 @@
     <p>Welcome Young Grasshopper!</p>
     <p>Please create an account to start your journey on Grasshopper Island!</p>
     
-    <form action="login" method="POST" id="action-form">
+    <form action="/create" method="POST" id="action-form">
         <label for="first_name">First Name:</label>
         <input type="text" name="first_name" required autofocus>
 
