--- a/.nest/app/templates/student-login.html
+++ b/.nest/app/templates/student-login.html
@@ -20,7 +20,7 @@
     {% endwith %}
     <p>Enter your login info to continue your journey through American University.</p>
 
-    <form action="/" method="post" id="action-form">
+    <form action="/login" method="post" id="action-form">
         <label for="email">Email</label>
         <input type="email" name="email" required>
         
